src/styles/global.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background: #09090b;
  color: white;
  overflow-x: hidden;
}

body::before {
  content: "";

  position: fixed;

  width: 900px;
  height: 900px;

  left: -300px;
  top: -250px;

  border-radius: 50%;

  background: radial-gradient(circle,
      rgba(59,130,246,.18),
      transparent 70%);

  pointer-events: none;
}

body::after {

  content: "";

  position: fixed;

  right: -350px;
  bottom: -350px;

  width: 900px;
  height: 900px;

  border-radius: 50%;

  background: radial-gradient(circle,
      rgba(96,165,250,.12),
      transparent 70%);

  pointer-events: none;
}

main {
  width: 100%;
}

h1 {
  font-size: 3rem;
  margin-bottom: 1rem;
}

p {
  color: #bdbdbd;
  font-size: 1.2rem;
}

